--- a/SportStore/SportStore.WebUI/Views/Shared/Site.Master
+++ b/SportStore/SportStore.WebUI/Views/Shared/Site.Master
@@ -5,12 +5,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
+    <link rel="Stylesheet" href="../../Content/Site.css" />
 </head>
 <body>
-    <div>
-        <asp:ContentPlaceHolder ID="MainContent" runat="server">
-        
-        </asp:ContentPlaceHolder>
+    <div id="header">
+        <div class="title">Sports Store</div>
+    </div>
+    <div id="categories">
+        todo
+    </div>
+    <div id="content">
+        <asp:ContentPlaceHolder ID="MainContent" runat="server" />
     </div>
 </body>
 </html>
