--- a/SportStore/SportStore.WebUI/Views/Shared/Site.Master
+++ b/SportStore/SportStore.WebUI/Views/Shared/Site.Master
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="header">
+        <% if (! (ViewContext.Controller is SportStore.WebUI.Controllers.CartController)) { %>
+            <% Html.RenderAction("Summary", "Cart"); %>
+        <% } %>
         <div class="title">Sports Store</div>
     </div>
     <div id="categories">
