--- a/SportStore/SportStore.WebUI/Views/Shared/Site.Master
+++ b/SportStore/SportStore.WebUI/Views/Shared/Site.Master
@@ -5,7 +5,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
-    <link rel="Stylesheet" href="../../Content/Site.css" />
+    <link rel="Stylesheet" href="<%= Url.Stylesheet("Site.css") %>" />
+    
 </head>
 <body>
     <div id="header">
@@ -20,7 +21,7 @@
     <div id="content">
         <asp:ContentPlaceHolder ID="MainContent" runat="server" />
     </div>
-    <script src="../../Scripts/MicrosoftAjax.js" type="text/javascript"></script>
-    <script src="../../Scripts/MicrosoftMvcValidation.js" type="text/javascript"></script>
+    <script src="<%= Url.Script("MicrosoftAjax.js") %>" type="text/javascript"></script>
+    <script src="<%= Url.Script("MicrosoftMvcValidation.js") %>" type="text/javascript"></script>
 </body>
 </html>
